--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,3 +30,7 @@ jobs:
         run: mvn test
       - name: Generate report
         run: mvn allure:report
+      - uses: actions/upload-artifact@v2
+        with:
+          name: allure-report
+          path: target/site
